# blockpipe

./: CNAME  Cargo.toml  README.md  index.html
.github/workflows/: pages-deploy.yml
assets/: index--UqQtKfn.js  index-9eTJKI09.css  index-HA4Ow22i.js  index-IjdP0JPz.js  index-OtSFoVQK.js  language_bg-CmYxwd22.wasm
blockpipe-web-frontend/: index.html  package.json  vite.config.ts
blockpipe-web-frontend/src/: App.tsx  editor.tsx  main.tsx  tut.yml
examples/: literals.blkp  one-pipe.blkp  pipeline.blkp  recursive-block.blkp  recursive-tuple.blkp
frontend/: Cargo.toml
frontend/src/: main.rs
frontend_impl/: Cargo.toml
frontend_impl/src/: main.rs
language/: Cargo.toml
language/src/: interpreter.rs  lib.rs  parser.rs
language/src/interpreter/: environment.rs  interp.rs  interp_runtime.rs  mod.rs  tests.rs  value.rs
language/src/lexer/: mod.rs  tests.rs  token.rs
language/src/parser/: ast.rs  mod.rs  parse.rs  tests.rs
language_impl/: Cargo.toml
language_impl/src/: interpreter.rs  lexer.rs  parser.rs
runtime/: Cargo.toml
runtime/src/: interpreter_runtime.rs  lib.rs
src/: main.rs
src/command/: interpret.rs  mod.rs  parse.rs
src/language/: interpreter.rs  lexer.rs  mod.rs  parser.rs
src/language/interpret/: mod.rs  stack.rs  value.rs
src/language/interpret/interpreter/: bind.rs  binding.rs  literal.rs  mod.rs  pipe.rs  tuple.rs
src/language/lexer/: mod.rs
src/language/parse/: ast.rs  error.rs  mod.rs
src/language/parser/: mod.rs
test_src/: hello.blkp  literal.blkp  pipe.blkp  pipechain.blkp  tuple.blkp
(+9 files in other folders)
