[package]
name = "language"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.3"
logos = "0.13.0"
runtime = {path = "../runtime"}
wasm-bindgen = "0.2.89"
